added instrument serif

--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Designer Quotes</title>
+    <link href="https://api.fontshare.com/v2/css?f[]=instrument-serif@400,500,600,700&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/18.2.0/umd/react.development.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/18.2.0/umd/react-dom.development.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/7.23.5/babel.min.js"></script>
     <style>
+        @import url('https://api.fontshare.com/v2/css?f[]=instrument-serif@400,500,600,700&display=swap');
         body {
             font-family: 'Instrument Serif';
             background-color: #f5f5f5;
