--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             cursor: pointer;
             font-size: 16px;
             margin: 1rem 0;
+            font-family: 'Instrument Serif';
         }
         button:hover {
             background: #0051cc;
@@ -53,6 +54,7 @@
         .author {
             color: #666;
             font-weight: 500;
+            font-family: 'Instrument Serif';
         }
         .error {
             color: #ff0000;
