--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
             background-color: #f5f5f5;
             margin: 0;
             padding: 20px;
-            display: flex;
-            justify-content: center;
+            //display: flex;
+            //justify-content: center;
             min-height: 100vh;
+            position: relative;
         }
         .quote-card {
             background: white;
@@ -26,7 +27,11 @@
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
             max-width: 600px;
             width: 100%;
-            margin-top: 2rem;
+            //margin-top: 2rem;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
         button {
             background: #0070f3;
