--- a/index.html
+++ b/index.html
@@ -9,113 +9,147 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/18.2.0/umd/react-dom.development.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/7.23.5/babel.min.js"></script>
     <style>
-        @import url('https://api.fontshare.com/v2/css?f[]=instrument-serif@400,500,600,700&display=swap');
         body {
-            font-family: 'Instrument Serif';
-            background-color: #f5f5f5;
+            font-family: 'Instrument Serif', 'Mountains of Christmas';
             margin: 0;
-            padding: 20px;
-            //display: flex;
-            //justify-content: center;
+            padding: 0;
             min-height: 100vh;
-            position: relative;
+            background-color: #e0dcd3;
+            background-image: 
+                linear-gradient(rgba(0, 0, 0, 0.03) 1px, transparent 1px),
+                linear-gradient(90deg, rgba(0, 0, 0, 0.03) 1px, transparent 1px);
+            background-size: 96px 96px;
         }
-        .quote-card {
-            background: white;
+
+        .main-container {
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+            align-items: center;
+            justify-content: space-between;
             padding: 2rem;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-            max-width: 600px;
-            width: 100%;
-            //margin-top: 2rem;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+            box-sizing: border-box;
         }
-        button {
-            background: #0070f3;
+
+        .quote-container {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            max-width: 800px;
+            width: 100%;
+        }
+
+        .quote-text {
+            font-size: 4rem;
+            line-height: 1.2;
+            margin: 0 0 1rem 0;
+            font: 'Instrument Serif'
+        }
+
+        .author {
+            font-size: 2rem;
+            color: #333;
+            margin: 1.5rem 0;
+        }
+
+        .new-quote-btn {
+            background-color: #333;
             color: white;
             border: none;
             padding: 12px 24px;
-            border-radius: 6px;
+            border-radius: 4px;
+            font-family: 'Instrument Serif';
+            font-weight: 400
+            font-size: 1rem;
             cursor: pointer;
-            font-size: 16px;
-            margin: 1rem 0;
-            font-family: 'Instrument Serif';
+            margin: 2rem 0;
         }
-        button:hover {
-            background: #0051cc;
+
+        .new-quote-btn:hover {
+            background-color: #222;
         }
-        button:disabled {
-            background: #ccc;
-            cursor: not-allowed;
-        }
-        .quote-text {
-            font-size: 1.5rem;
-            font-style: italic;
-            margin: 1rem 0;
-        }
-        .author {
+
+        .footer {
+            text-align: center;
             color: #666;
-            font-weight: 500;
-            font-family: 'Instrument Serif';
+            font-size: 1rem;
+            padding: 1rem;
+            width: 100%;
         }
-        .error {
-            color: #ff0000;
-            margin: 1rem 0;
+
+        .loading {
+            font-size: 1.5rem;
+            color: #333;
         }
     </style>
 </head>
 <body>
     <div id="root"></div>
     <script type="text/babel">
+        // Creating the main component
         function QuoteGenerator() {
+            // Setting up state variables using React hooks
             const [quote, setQuote] = React.useState(null);
-            const [isLoading, setIsLoading] = React.useState(false);
+            const [isLoading, setIsLoading] = React.useState(true);
             const [error, setError] = React.useState(null);
 
+            // Function to fetch a new quote
             const fetchQuote = async () => {
                 setIsLoading(true);
                 setError(null);
                 try {
-                    // Updated URL to use Vercel deployment
                     const response = await fetch('https://designer-quotes-wheat.vercel.app/api/quote/random');
-                    if (!response.ok) {
-                        throw new Error('Failed to fetch quote');
-                    }
+                    if (!response.ok) throw new Error('Failed to fetch quote');
                     const data = await response.json();
                     setQuote(data);
                 } catch (error) {
-                    console.error('Error fetching quote:', error);
                     setError('Could not load quote. Please try again later.');
+                    console.error('Error fetching quote:', error);
                 } finally {
                     setIsLoading(false);
                 }
             };
 
+            // Fetch a quote when the component mounts
             React.useEffect(() => {
                 fetchQuote();
             }, []);
 
             return (
-                <div className="quote-card">
-                    <h1>Designer Quotes</h1>
-                    {quote && !error && (
-                        <div>
-                            <p className="quote-text">"{quote.quote}"</p>
-                            <p className="author">— {quote.author}</p>
-                        </div>
-                    )}
-                    <button onClick={fetchQuote} disabled={isLoading}>
-                        {isLoading ? 'Loading...' : 'Get New Quote'}
-                    </button>
-                    {error && <p className="error">{error}</p>}
+                <div className="main-container">
+                    <div className="quote-container">
+                        {isLoading ? (
+                            <p className="loading">Loading...</p>
+                        ) : error ? (
+                            <p className="error">{error}</p>
+                        ) : quote ? (
+                            <>
+                                <p className="quote-text">"{quote.quote}"</p>
+                                <p className="author">-{quote.author}</p>
+                                <button 
+                                    onClick={fetchQuote} 
+                                    className="new-quote-btn"
+                                    disabled={isLoading}
+                                >
+                                    New Quote
+                                </button>
+                            </>
+                        ) : null}
+                    </div>
+                    <footer className="footer">
+                        <p>Built thi project, because I wasn't feeling motivated to work. Hope these quotes motivate me everyday</p>
+                        <p>Created by Shrey & Claude</p>
+                    </footer>
                 </div>
             );
         }
 
-        ReactDOM.render(<QuoteGenerator />, document.getElementById('root'));
+        // Render the component to the DOM
+        const root = ReactDOM.createRoot(document.getElementById('root'));
+        root.render(<QuoteGenerator />);
     </script>
 </body>
 </html>
