--- a/index.html
+++ b/index.html
@@ -75,12 +75,25 @@
             background-color: #222;
         }
 
-        .footer {
+       .footer {
             text-align: center;
-            color: #666;
-            font-size: 1rem;
             padding: 1rem;
             width: 100%;
+        }
+
+        .footer p:first-child {
+            font-family: 'Instrument Serif', serif;
+            color: #666;
+            font-size: 1rem;
+            margin-bottom: 0.5rem;
+        }
+
+        .footer p:last-child {
+            font-family: 'Mountains of Christmas', cursive;
+            color: #666;
+            font-size: 1.2rem; /* Slightly larger to account for different font proportions */
+            font-weight: 700;
+            margin-top: 0.5rem;
         }
 
         .loading {
