--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
             padding: 12px 24px;
             border-radius: 4px;
             font-family: 'Instrument Serif';
-            font-weight: 400
-            font-size: 1rem;
+            font-weight: 400;
+            font-size: 1.2rem;
             cursor: pointer;
             margin: 2rem 0;
         }
