--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                         ) : null}
                     </div>
                     <footer className="footer">
-    <p>Built this project, because I wasn't feeling motivated to work. Hope these quotes motivate me everyday</p>
+    <p>Built this project to remind viewers why design matters. Hope these quotes motivate me everyday</p>
     <p>Created by <a href="https://twitter.com/_shreybhagat" className="twitter-link">Shrey</a> & Claude</p>
                     </footer>
                 </div>
