--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 setIsLoading(true);
                 setError(null);
                 try {
-                    const response = await fetch('https://designer-quotes-wheat.vercel.app/api/quote/random');
+                    const response = await fetch('https://designerquotes.vercel.app//api/quote/random');
                     if (!response.ok) throw new Error('Failed to fetch quote');
                     const data = await response.json();
                     setQuote(data);
